# poly-trading-bot

./: .env.example  .gitignore  ACTIVATE_VENV.md  API_ISSUES.md  ENV_SETUP.md  IDE_SETUP.md  OVERVIEW.md  POLYMARKET_TRADING_STRATEGIES.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TESTING.md  VIEW_LOGS.md  pyproject.toml  requirements.txt  strategy_1_arbitrage.md  strategy_2_pairs_trading.md  strategy_3_probability_models.md  strategy_4_market_making.md  strategy_5_wallet_following.md  strategy_6_structured_products.md
docs/: DEPLOYMENT.md  strategy_1_arbitrage.md  strategy_3_probability_models.md  strategy_4_market_making.md  strategy_5_wallet_following.md  strategy_6_structured_products.md  strategy_7_cross_market_arbitrage.md
shared/: __init__.py
shared/python/: __init__.py  polymarket_client.py  utils.py
strategies/: __init__.py
strategies/strategy_1_arbitrage/: README.md
strategies/strategy_1_arbitrage/python/: SETUP.md  __init__.py  bot.py  detector.py  executor.py  paper_trading.py  requirements.txt  test_connection.py
tests/: __init__.py  test_arbitrage_detector.py  test_arbitrage_executor.py  test_integration.py
