[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly-trading-bot"
version = "0.1.0"
description = "PolyMarket Trading Bot - Automated arbitrage and trading strategies"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "py-clob-client>=0.34.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["shared", "strategies"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "shared/python",
    "strategies/strategy_1_arbitrage/python"
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

